[project]
name = "prod-agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.2",
    "langsmith>=0.8.6",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
